name:           chia
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       <syn>
build-type:     Simple
build-depends:  FUtil, array, base, containers, mtl, process

executable:     chia
main-is:        Main.hs
hs-source-dirs: src
